# language-server-extensions

./: README.md  presentation.pptx  vs_capabilities.json  vscode_capabilities.json
.github/workflows/: rust_release.yaml
language-server/: .env  Cargo.toml  Makefile.toml
language-server/src/: main.rs
test-project/: .gitignore  index.js  package-lock.json  package.json  request.http
vs-log-extension/: .gitignore  Client.cs  Command.cs  CommandPackage.cs  CommandPackage.vsct  ContentTypeDefinition.cs  Key.snk  source.extension.vsixmanifest  vs-log-extension.csproj  vs-log-extension.sln
vs-log-extension/Properties/: AssemblyInfo.cs
vscode-log-extension/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-log-extension/src/: decorations.ts  extension.ts  server.ts
