[package]
name = "language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.6.0"
lsp-types = "0.93.0"
dotenv = "0.15.0"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
regex = "1"
